# imagent-bench

./: .env.example  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  checklists.py  compute_scores.py  judge.py  pyproject.toml  requirements.txt  runtime_config.py  score_utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
backends/: __init__.py  ms_swift_backend.py  openrouter_backend.py
baselines/: README.md
configs/: api-gate.yaml  image-agent-smoke.yaml  local-smoke.yaml  official.json  openrouter-live-smoke.json  openrouter-vision-benchmark.json  pr-gate.yaml  zai-live-smoke.json
docs/: api_benchmark.md  ci.md
imagent_bench/: __init__.py  compare.py  config.py  promote_baseline.py  registry.py  runner.py
imagent_bench/evaluators/: checklist.py  judge.py
imagent_bench/metrics/: __init__.py  aggregate.py
imagent_bench/schemas/: result.schema.json  task.schema.json
imagent_bench/tasks/ia_bench_v1/: README.md  suite.yaml
imagent_bench/tasks/ia_bench_v1/assets/: qa_badge_note.json  release_readiness_brief.json
imagent_bench/tasks/ia_bench_v1/cases/: feedback.jsonl  memory.jsonl  plan.jsonl  reason.jsonl  search.jsonl
schemas/: benchmark-report.schema.json
scripts/: install_agent_requirements.sh
src/imagent_bench/: __init__.py  agent_loader.py  cli.py  config.py  models.py  policy.py  reporting.py  runner.py  scoring.py  suite.py
tests/: test_aggregate.py  test_compare.py  test_config.py  test_image_judge.py  test_promote_baseline.py  test_registry.py  test_runner.py  test_scoring.py
tests/fixtures/echo_agent/: agent.yaml
(+12 files in other folders)
