[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imagent-bench"
version = "0.1.0"
description = "Official benchmark runner and report generator for imagent agents."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
  "Pillow==11.3.0",
  "pandas==2.3.3",
  "openpyxl==3.1.5",
  "tqdm==4.67.3",
  "huggingface_hub==1.15.0",
  "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
imagent-bench = "imagent_bench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
imagent_bench = ["suites/**/*.jsonl", "suites/**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_default_fixture_loop_scope = "function"
